<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_2e2942_16dp"
    android:backgroundTint="@color/color_3D3255"
    android:paddingStart="@dimen/dimen_16dp"
    android:paddingTop="18dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitEnd"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        app:layout_constraintStart_toEndOf="@id/tvDescription"
        app:layout_constraintBottom_toTopOf="@id/btnAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CommonBoldTextViewStyle"
        android:text="@string/feature_homepage_gold_redemption_title"
        android:textColor="@color/color_ACA1D3"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="@dimen/dimen_24dp"
        app:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        style="@style/CommonBoldTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/feature_homepage_gr_card_desc"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:lineHeight="30sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription2"
        style="@style/CommonTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:paddingBottom="@dimen/dimen_32dp"
        android:textSize="14sp"
        android:text="@string/feature_homepage_gr_card_subtitle"
        android:textColor="@color/color_D5CDF2"
        app:layout_constraintBottom_toTopOf="@id/btnAction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:lineHeight="@dimen/dimen_20dp" />

    <com.jar.app.core_ui.widget.button.CustomButtonV2
        android:id="@+id/btnAction"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_18dp"
        android:clickable="true"
        android:focusable="true"
        app:buttonEndColor="@color/color_36A2FF"
        app:buttonStartColor="@color/color_A841FF"
        app:buttonText="@string/feature_gold_redemption_buy_voucher"
        app:buttonTextColor="@color/white"
        app:buttonTextAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_min="128dp" />

</androidx.constraintlayout.widget.ConstraintLayout>