<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/feature_buy_gold_v2_bg_rounded_2e2942_16dp"
    android:backgroundTint="@color/color_3D3255"
    android:paddingTop="18dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivImage"
        android:layout_width="158dp"
        android:layout_height="176dp"
        android:translationY="5dp"
        android:padding="@dimen/dimen_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:fontFamily="@font/inter_bold"
        android:text="@string/feature_homepage_vasooli_card_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/feature_homepage_vasooli_card_desc"
        android:textColor="#ACA1D3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:lineHeight="20dp" />

    <com.jar.app.core_ui.widget.button.CustomButtonV2
        android:id="@+id/btnAction"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:clickable="true"
        android:focusable="true"
        app:buttonEndColor="@color/color_36A2FF"
        app:buttonStartColor="@color/color_A841FF"
        app:buttonText="@string/feature_homepage_start"
        app:buttonTextColor="@color/white"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_min="40dp"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintWidth_min="128dp" />

</androidx.constraintlayout.widget.ConstraintLayout>